syntax = "proto3";


import "google/protobuf/timestamp.proto";
import "JobConfirmationService.proto";

option csharp_namespace = "Persistence";
option java_multiple_files = true;

package ChatService;

service ChatService {
    rpc SendMessage (SendMessageRequest) returns (SendMessageResponse);
    rpc GetChatOverview (GetChatOverviewRequest) returns (GetChatOverviewResponse);
    rpc GetChatHistory (GetChatHistoryRequest) returns (GetChatHistoryResponse);
    rpc CreateChat (CreateChatRequest) returns (CreateChatResponse);
}

// Send Message
message SendMessageRequest {
  ChatUserObject author = 1;
  int32 chat_id = 2;
  string content = 3;
}

message SendMessageResponse {
  MessageObject message = 1;
}
//Get all chats
message GetChatOverviewRequest{
  ChatUserObject user = 1;
}

message GetChatOverviewResponse{ //Skal indeholder en liste af usernames for dem som er i chatten
  repeated ChatOverviewObject chats = 1;
}

// Get Chat History
message GetChatHistoryRequest{
  int32 chatId = 1;
}

message GetChatHistoryResponse{ 
  repeated MessageObject messages = 1;
  JobConfirmationService.JobConfirmationObject jobConfirmation = 2;
  ChatUserObject substitute = 3;
  ChatUserObject employer = 4;
}

// Create Chat
message CreateChatRequest {
  ChatUserObject substitute = 1;
  ChatUserObject employer =3;
}

message CreateChatResponse{
  int32 id = 1;
  ChatUserObject substitute = 2;
  ChatUserObject employer = 3;
}

// Shared objects
message MessageObject {
  int32 id = 1; 
  ChatUserObject author = 2;
  int32 chat_id = 3;
  string content = 4;
  google.protobuf.Timestamp created_at = 5;
}

message ChatOverviewObject {
  int32 id = 1;
  ChatUserObject substitute = 2;
  ChatUserObject employer = 3;
}

message ChatObject { 
  int32 id = 1;
  ChatUserObject substitute = 2;
  ChatUserObject employer = 3;
  repeated MessageObject messages = 4;
}

message ChatUserObject{
  int32 id = 1;
  
}



